# boidemic

./: CHANGELOG.md  README.md  boidemic.cabal
app/: Main.hs
src/: Basic.hs  Boidemic.hs
