cabal-version:      2.4
name:               boidemic
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jess Foster
maintainer:         jess.foster@bristol.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Boidemic

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        apecs
      , apecs-gloss
      , base
      , containers
      , data-default-class
      , flow
      , linear
      , string-interpolate
      , gloss
      , random
      , witch
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions: LexicalNegation

executable boidemic
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        -- base ^>=4.16.4.0,
        base,
        boidemic

    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
